--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -12,16 +12,20 @@ body,html {
 
 .keys {
   display: flex;
-  flex: 1;
+  /* flex: 1; */
   min-height: 100vh;
   align-items: center;
+  gap: 1rem;
+  /* flex-wrap: wrap; */
   justify-content: center;
 }
 
 .key {
   border: .4rem solid black;
   border-radius: .5rem;
-  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 1.5rem;
   padding: 1rem .5rem;
   transition: all .07s ease;
@@ -39,7 +43,7 @@ body,html {
 }
 
 kbd {
-  display: block;
+  /* display: block; */
   font-size: 4rem;
 }
 
